tests/error/protocol_errors/self_inferred_type.err
Error: Unsupported (at $FILE:6:12)
  | 
4 | class MyProto:
5 |     @guppy.require
6 |     def foo(self) -> None: ...
  |             ^^^^ Inference of type for `self` is not supported in protocol
  |                  methods

Guppy compilation failed due to 1 previous error
